# pydantic_class_generator

./: .gitignore  README.md  pyproject.toml
config_files/: ini_connection.ini  json_complex.json  json_connection.json  yaml_complex.yaml  yaml_connection.yaml
pydantic_class_generator/: class_code_generator.py  demo.py  node.py  node_parser.py
